add showhome and showskills functions

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <li><a href="#">Home</a></li>
 
-        <li><a href="#">Skills</a></li>
+        <li><a href="#" onclick="showSkills()">Skills</a></li>
 
         <li><a href="#">Known Languages</a></li>
 
@@ -111,7 +111,7 @@
 
       <div id="main">
 
-        <div class="page">
+        <div id = "home" class="page">
 
           <p style="text-align: center; color: darkblue">
 
@@ -124,7 +124,7 @@
 
 
 
-        <div class="page">
+        <div id = "skills" class="page">
 
           <h2>Skills</h2>
 
